--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ QuasarFrontEnd/node_modules
 Eolian-Telemetria-Auriga.iml
 
 # CI
-./target
+target/
 
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
