--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,14 @@
             <version>1.27</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.pi4j/pi4j-core -->
+        <dependency>
+            <groupId>com.pi4j</groupId>
+            <artifactId>pi4j-core</artifactId>
+            <version>1.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
