--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
             <version>1.27</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.pi4j</groupId>
+            <artifactId>pi4j-core</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 
     <build>
