--- a/.github/workflows/mvnC.yml
+++ b/.github/workflows/mvnC.yml
@@ -8,14 +8,14 @@ jobs:
 
     strategy:
       matrix:
-        maven: [ '3.5.4', '3.6.3', '3.8.2' ]
+        maven: ['3.8.2' ]
 
     name: Maven ${{ matrix.maven }} sample
 
     steps:
       - uses: actions/checkout@v2
       - name: Setup Maven Action
-        uses: s4u/setup-maven-action@< version >
+        uses: s4u/setup-maven-action@3.8.2
         with:
           java-version: 1.8.0.212
           maven-version: ${{ matrix.maven }}
