--- a/.github/workflows/mvnC.yml
+++ b/.github/workflows/mvnC.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Maven Action
-        uses: s4u/setup-maven-action@v2.4.1
+        uses: s4u/maven-settings-action@v2.4.1
         with:
           java-version: 1.8.0.212
           maven-version: ${{ matrix.maven }}
