--- a/.github/workflows/mvnC.yml
+++ b/.github/workflows/mvnC.yml
@@ -1,4 +1,4 @@
-name: MVN build with mirrors
+name: Compile project into jar (with dependencies)
 
 on: [push]
 
@@ -6,19 +6,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        maven: ['3.8.2' ]
-
-    name: Maven ${{ matrix.maven }} sample
+    name: mvn clean compile including jars
 
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Maven Action
-        uses: s4u/maven-settings-action@v2.4.1
+
+      - uses: actions/setup-java@v1
         with:
           java-version: 1.8.0.212
-          maven-version: ${{ matrix.maven }}
-          mirrors: '[{"id": "digi-repo", "name": "digi-repo", "mirrorOf": "rxtx, rxtx-native", "url": "http://ftp1.digi.com/support/m-repo/"}]'
+
+      - uses: s4u/maven-settings-action@v2.4.1
+        with:
+          mirrors: '[{"id": "digi-repo", "name": "digi-repo", "mirrorOf": "external:http:*", "url": "http://ftp1.digi.com/support/m-repo/"}]'
 
       - run: mvn clean compile assembly:single
