refactor!: remove vscode settings from repo

--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,9 @@ fabric.properties
 ######## VSCODE ########
 .vscode
 .vscode/*
+**/.settings
+**/.classpath
+**/.project
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
