--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>com.corundumstudio.socketio</groupId>
             <artifactId>netty-socketio</artifactId>
-            <version>1.7.7</version>
+            <version>1.7.9</version>
         </dependency>
 
         <dependency>
@@ -77,7 +77,7 @@
                     <configuration>
                         <archive>
                             <manifest>
-                                <mainClass>Main.MainSender</mainClass>
+                                <mainClass>Main.MainReceiver</mainClass>
                             </manifest>
                         </archive>
                         <descriptorRefs>
